[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "email-triage-env"
version = "1.0.0"
description = "Real-world email triage environment for RL agents"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Mohit", email = "mohitt1213@gmail.com"}
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
    "python-multipart>=0.0.6",
    "openai>=1.6.0",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[project.urls]
Homepage = "https://github.com/Mohitt029/email-triage-env"
"HF Space" = "https://huggingface.co/spaces/MohitS029/email-triage-env1"

[tool.openenv]
sdk = "docker"
app_file = "server/app.py"
